2007-10-01  Tomas Cerha  <cerha@brailcom.org>

	* pytis/form/list.py (BrowseForm): Added row context menu item for
	`BrowseForm.COMMAND_NEW_RECORD(copy=True)'.

	* pytis/form/configui.py (ConfigForm.__init__): Pass
	`select_row=0' to parent constructor.  Don't call
	`self._select_row()' and `self._init_select()'.

	* pytis/web/form.py: Distinguish image and link URI provider. 

	* pytis/presentation/spec.py (FieldSpec): The constructor argument
	and method `thumbnail' removed.

2007-09-27  Tomas Cerha  <cerha@brailcom.org>

	* pytis/form/configui.py: Extend field width for
	`export_directory' option.

2007-09-25  Tomas Cerha  <cerha@brailcom.org>

	* pytis/web/form.py (ShowForm, BrowseForm): Use the display value
	only if `prefer_display' was set to true.

	* pytis/presentation/spec.py (CodebookSpec.prefer_display)
	(FieldSpec.prefer_display): New methods and constructor arguments
	of the same name.

	* pytis/presentation/field.py (PresentedRow.prefer_display): New method.

2007-09-21  Tomas Cerha  <cerha@brailcom.org>

	* pytis/web/form.py (EditForm): Include key value in a hidden field.

2007-09-19  Tomas Cerha  <cerha@brailcom.org>

	* pytis/form/_grid.py: Prevent segfault on boolean cell doubleclick.

2007-09-18  Tomas Cerha  <cerha@brailcom.org>

	* pytis/presentation/spec.py (Fields): New class.

	* pytis/web/form.py (BrowseForm): Only include page controls if
	there is more than one page.

2007-09-13  Tomas Cerha  <cerha@brailcom.org>

	* pytis/presentation/spec.py (Fields): New class supporting field
	inheritance.

2007-09-11  Tomas Cerha  <cerha@brailcom.org>

	* pytis/web/form.py: Added support for custom list layout.

2007-09-07  Tomas Cerha  <cerha@brailcom.org>

	* pytis/web/form.py: Table export optimized.  Fixed codebook
	display in tables.  Show paging controls on both sides of a table.

2007-09-04  Tomas Cerha  <cerha@brailcom.org>

	* pytis/web/form.py (BrowseForm._export_controls): Page count
	computation fixed.
